@@ -99,26 +99,11 @@ if "x%JAVA_HOME%" == "x" (
   )
 )
 
-"%JAVA%" --add-modules=java.se -version >nul 2>&1 && (set MODULAR_JDK=true) || (set MODULAR_JDK=false)
-
-if "%MODULAR_JDK%" == "true" (
-  echo "%PROCESS_CONTROLLER_JAVA_OPTS%" | findstr /I "\-\-add\-modules" > nul
-  if errorlevel == 1 (
-    rem Set default modular jdk options
-    set PROCESS_CONTROLLER_JAVA_OPTS=%PROCESS_CONTROLLER_JAVA_OPTS% --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-    set PROCESS_CONTROLLER_JAVA_OPTS=%PROCESS_CONTROLLER_JAVA_OPTS% --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-    set PROCESS_CONTROLLER_JAVA_OPTS=%PROCESS_CONTROLLER_JAVA_OPTS% --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
-    set PROCESS_CONTROLLER_JAVA_OPTS=%PROCESS_CONTROLLER_JAVA_OPTS% --add-modules=java.se
-  )
-  echo "%HOST_CONTROLLER_JAVA_OPTS%" | findstr /I "\-\-add\-modules" > nul
-  if errorlevel == 1 (
-    rem Set default modular jdk options
-    set HOST_CONTROLLER_JAVA_OPTS=%HOST_CONTROLLER_JAVA_OPTS% --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-    set HOST_CONTROLLER_JAVA_OPTS=%HOST_CONTROLLER_JAVA_OPTS% --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-    set HOST_CONTROLLER_JAVA_OPTS=%HOST_CONTROLLER_JAVA_OPTS% --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
-    set HOST_CONTROLLER_JAVA_OPTS=%HOST_CONTROLLER_JAVA_OPTS% --add-modules=java.se
-  )
-)
+rem set default modular jvm parameters
+call common.bat :setDefaultModularJvmOptions "%PROCESS_CONTROLLER_JAVA_OPTS%"
+set "PROCESS_CONTROLLER_JAVA_OPTS=%PROCESS_CONTROLLER_JAVA_OPTS% %DEFAULT_MODULAR_JVM_OPTIONS%"
+call common.bat :setDefaultModularJvmOptions "%HOST_CONTROLLER_JAVA_OPTS%"
+set "HOST_CONTROLLER_JAVA_OPTS=%HOST_CONTROLLER_JAVA_OPTS% %DEFAULT_MODULAR_JVM_OPTIONS%"
 
 rem Add -server to the JVM options, if supported
 "%JAVA%" -server -version 2>&1 | findstr /I hotspot > nul
